# plant-disease-identifier-pytorch

./: README.md  dvc.yaml  pyproject.toml  requirements.txt
config/: config.py
data/processed/rice/: split_stats.json
data/processed/sugarcane/: split_stats.json
mlruns/.trash/297972326167310191/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/545ba7adef62495fbd9ff51c2bcfad07/: meta.yaml
mlruns/0/6b144d105b0547c1b5a63cd3134750df/: meta.yaml
mlruns/0/7faa2e00b6314cd98af3f84303a5e9b8/: meta.yaml
mlruns/0/8e1cd3fb51f746539dfc7c85c1835199/: meta.yaml
mlruns/0/bd623de1173c427c8e008d630a17c0e5/: meta.yaml
mlruns/114606103871562608/: meta.yaml
mlruns/114606103871562608/354702e49583476099cc01344d18fd1c/: meta.yaml
mlruns/114606103871562608/4332b1e3857a4bd0b430d00bb50b8281/: meta.yaml
mlruns/114606103871562608/6c0d8db770b34ee1bc81ff331135eaf9/: meta.yaml
mlruns/114606103871562608/bc36037730ce4b3bb3f643dd74c6e120/: meta.yaml
mlruns/114606103871562608/d1600b5a2a83476fa7c01277cffdf5c1/: meta.yaml
mlruns/636206537075738508/: meta.yaml
mlruns/636206537075738508/44d31bd2aaa544b7acdbfc3a61857f8a/: meta.yaml
mlruns/636206537075738508/49459db7487d4a0083cd14efc13b7363/: meta.yaml
mlruns/636206537075738508/4cbc501c7fda46ee90657898cbffe508/: meta.yaml
mlruns/636206537075738508/6a89beda76f044f1a6e5e159364ed177/: meta.yaml
scripts/: rice_train_model.py  run_inference.py  sugarcane_train_model.py
src/data/: data_analysis.py  data_augmentation.py  data_preparation.py
src/inference/: predictor.py
src/models/: model_architecture.py
src/training/: trainer.py
(+178 files in other folders)
